--- a/blocks.css/header.css
+++ b/blocks.css/header.css
@@ -1,138 +1,111 @@
 .header {
-    
-    height: 100vh;
-    margin: 0;
-    background-image:url(../images/background_header.svg);
-    background-size:cover ;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: #ffffff;
-    padding-top: 30px;
-    padding-left: 80px;
-    padding-right: 80px;
-    padding-bottom: 40px;
+  height: 100vh;
+  margin: 0;
+  background-image: url(../images/background_header.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #ffffff;
+  padding-top: 30px;
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-bottom: 40px;
 }
 
 .nav {
-    
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    font-family: "inter", arial, sans-serif;
-    font-style: normal;
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 20px;
-  }
-
-  
-
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-family: "inter", arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
 
 .nav-links {
-    display: flex;
-    align-items: center;
-    column-gap: 20px;
-    margin-top: 8px;
-  }
-
-.nav__link{
-    
-    
-    color: #000000;
-    text-decoration: none;
-    margin-right: 20px;
-    
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+  margin-top: 8px;
 }
 
-.nav__link:last-child{
-
-    margin-right:0px;
+.nav__link {
+  color: #000000;
+  text-decoration: none;
+  margin-right: 20px;
 }
 
-.nav__link:hover{
-    color:#2F80ED ;
+.nav__link:last-child {
+  margin-right: 0px;
 }
 
-.header__content{
-    
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.nav__link:hover {
+  color: #2f80ed;
 }
 
-.header__title{
-   
-    font-family: "inter", arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 60px;
-    line-height: 72px;
-    margin: 80px 0 0;
-    max-width: 700px;
-
+.header__content {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.span-accent{
-    display: block;
-    font-family: "Noto Serif" ,'Times New Roman', serif;
-    font-style: italic;
-    font-weight: normal;
-    font-size: 60px;
-    line-height: 72px;
-    color: #2F80ED;
-    margin-bottom: auto;
+.header__title {
+  font-family: "inter", arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 60px;
+  line-height: 72px;
+  margin: 80px 0 0;
+  max-width: 700px;
 }
 
-.header__description{
+.span-accent {
+  display: block;
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 72px;
+  color: #2f80ed;
+  margin-bottom: auto;
+}
 
-    font-family: "Noto Serif" ,'Times New Roman', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    margin: 28px 0 0;
-    max-width: 670px;
-    
+.header__description {
+  font-family: "Noto Serif", "Times New Roman", serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 28px 0 0;
+  max-width: 670px;
 }
 
 .header__image {
-    position: absolute;
-    top: 124px;
-    right: 5px;
-    max-width: 650px;
-    
-  }
+  position: absolute;
+  top: 124px;
+  right: 5px;
+  max-width: 650px;
+}
 
-  .header-footer {
-    margin-bottom: 0;
-    margin-top: auto;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    font-family: "inter", arial, sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    padding-top: 223px;
-    
-  }
+.header-footer {
+  margin-bottom: 0;
+  margin-top: auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  font-family: "inter", arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  padding-top: 223px;
+}
 
-  .hour__list{
-
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  
- 
-  
-
-  
-  
-  
-  
-  
+.hour__list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
