--- a/blocks.css/footer.css
+++ b/blocks.css/footer.css
@@ -1,90 +1,73 @@
-.footer{
-
-    background: linear-gradient(180deg, #0A2850 0%, #071931 100%);
-    padding: 60px 100px 60px 80px;
-    color: #ffffff;
-   
-
+.footer {
+  background: linear-gradient(180deg, #0a2850 0%, #071931 100%);
+  padding: 60px 100px 60px 80px;
+  color: #ffffff;
 }
 
-.footer__content{
-
-display: flex;
-justify-content: space-between;
+.footer__content {
+  display: flex;
+  justify-content: space-between;
 }
 
-.footer__list{
-
-   
-    font-family:"inter", arial, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
-   
-   
+.footer__list {
+  font-family: "inter", arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0;
+  padding: 0;
 }
 
-.list__items{
-
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.list-item {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-.list__item:first-child{
-
-margin-bottom: 16px;
+.list-item:first-child {
+  margin-bottom: 20px;
 }
 
-.footer__logo{
-
-    width: 153px;
-    height: 32px;
-    margin: 0;
-    
-
-
+.list-item:last-child {
+  margin-top: 16px;
 }
 
-.footer__social-heading{
-
-    font-family: "inter", arial, sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 20px;
-    margin:0;
-    margin-bottom: 20px;
+.footer__logo {
+  width: 153px;
+  height: 32px;
+  margin: 0;
 }
 
-.footer__social-icon{
-
-    margin: 0;
-    margin-right: 10px;
-
-
+.footer__social-heading {
+  font-family: "inter", arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0;
+  margin-bottom: 20px;
 }
 
-.footer__social-link{
-
-    text-decoration: none;
-    color: #ffffff;
-
-
+.footer__social-icon {
+  margin: 0;
+  margin-right: 10px;
 }
 
-.footer__social-link:hover{
-
-    color: #c1c1c1;
+.footer__social-link {
+  text-decoration: none;
+  color: #ffffff;
 }
 
-.footer__copyright{
+.footer__social-link:hover {
+  color: #c1c1c1;
+}
 
-    padding-top: 108px;
-    font-family: "inter", arial, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 20px;
+.footer__copyright {
+  padding-top: 108px;
+  font-family: "inter", arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
 }
