--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -19,17 +19,24 @@
   padding: 0;
 }
 
-.list-item {
+.footer__list-heading {
+  font-size: 16px;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 20px;
+}
+
+.footer__list-item {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 
-.list-item:first-child {
+.footer__list-item:first-child {
   margin-bottom: 20px;
 }
 
-.list-item:last-child {
+.footer__list-item:last-child {
   margin-top: 16px;
 }
 
