--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -34,19 +34,27 @@
   display: flex;
   justify-content: center;
   gap: 40px;
+  height: 273px;
 }
 
-.recipes__video {
+.recipes__iframe {
   border: none;
+  width: 480px;
+  height: 273px;
 }
 
 .recipes__video-caption {
-  padding-top: 24px;
   font-family: "inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  line-height: 30px;
+  height: 30px;
   display: flex;
   justify-content: space-between;
+  margin: 0;
+  padding-top: 24px;
+}
+
+.video-caption {
+  margin: 0;
 }
