--- a/blocks/header.css
+++ b/blocks/header.css
@@ -83,3 +83,13 @@
   padding: 0;
   margin: 0;
 }
+
+.header__list-heading {
+  font-family: "inter", arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 0;
+  padding: 0;
+}
