--- a/blocks/header.css
+++ b/blocks/header.css
@@ -12,6 +12,13 @@
   padding-left: 80px;
   padding-right: 80px;
   padding-bottom: 40px;
+  position: relative;
+}
+
+.header__logo {
+  position: absolute;
+  top: 30px;
+  left: 30px;
 }
 
 .header__content {
@@ -19,6 +26,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding-top: 202px;
 }
 
 .header__title {
@@ -29,6 +37,7 @@
   line-height: 72px;
   margin: 80px 0 0;
   max-width: 700px;
+  z-index: 1;
 }
 
 .header__span-accent {
@@ -57,24 +66,29 @@
   top: 124px;
   right: 5px;
   max-width: 650px;
+  z-index: ;
 }
 
 .header__paragraphs {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+  margin: auto;
   font-family: "inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  height: 347px;
+  padding-right: 160px;
+  width: 100%;
+  position: absolute;
+  bottom: 40px;
+  box-sizing: border-box;
 }
 
 .header__paragraph {
   margin-bottom: 0;
   margin-top: auto;
-  padding-top: 190px;
   color: #838383;
 }
 
