--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,12 +1,13 @@
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: flex-start;
   font-family: "inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
+  width: 100%;
 }
 
 .nav__links {
