--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -34,7 +34,6 @@
   display: flex;
   justify-content: center;
   gap: 40px;
-  height: 273px;
 }
 
 .recipes__iframe {
@@ -48,13 +47,9 @@
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
-  height: 30px;
+  line-height: 30px;
   display: flex;
   justify-content: space-between;
   margin: 0;
   padding-top: 24px;
-}
-
-.video-caption {
-  margin: 0;
 }
