--- a/pages/index.css
+++ b/pages/index.css
@@ -15,3 +15,7 @@
 @import "../blocks/about.css";
 
 @import "../blocks/footer.css";
+
+@import "../blocks/cards.css";
+
+@import "../blocks/form.css";
