--- a/blocks/header.css
+++ b/blocks/header.css
@@ -13,6 +13,7 @@
   padding-right: 80px;
   padding-bottom: 40px;
   position: relative;
+  box-sizing: border-box;
 }
 
 .header__logo {
@@ -35,7 +36,7 @@
   font-weight: 500;
   font-size: 60px;
   line-height: 72px;
-  margin: 80px 0 0;
+  margin: 0;
   max-width: 700px;
   z-index: 1;
 }
@@ -66,30 +67,32 @@
   top: 124px;
   right: 5px;
   max-width: 650px;
-  z-index:0;
+  z-index: 0;
 }
 
-.header__paragraphs {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin: auto;
+.header__paragraph {
   font-family: "inter", arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  padding-right: 160px;
-  width: 100%;
-  position: absolute;
-  bottom: 40px;
-  box-sizing: border-box;
-}
-
-.header__paragraph {
   margin-bottom: 0;
   margin-top: auto;
   color: #838383;
+}
+
+.header__paragraph_type_hours {
+  position: absolute;
+  left: 80px;
+  bottom: 40px;
+  margin: 0;
+}
+
+.header__paragraph_type_adress {
+  position: absolute;
+  right: 80px;
+  bottom: 40px;
+  margin: 0;
 }
 
 .header__list {
