--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,6 @@
 
 @import "../blocks/footer.css";
 
-@import "../blocks/cards.css";
+@import "../blocks/card.css";
 
 @import "../blocks/form.css";
